--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,4 +4,116 @@
 @import 'libs';
 @import 'global';
 
+body {
+  background-color: $color-background-black;
+  color: $color-white;
+  font-size: 24px;
+  line-height: 28px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+}
 
+.header {
+  height: 100vh;
+  position: absolute;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.3);
+  left: 0;
+  right: 0;
+}
+
+.header__top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  padding-top: 36px;
+  padding-bottom: 29px;
+}
+
+.header__btn {
+  width: 60px;
+  height: 60px;
+  border: 1px solid $color-white;
+  margin-top: 31px;
+  padding: 17px 12px;
+  background-color: rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &__line {
+    width: 36px;
+    height: 2px;
+    background-color: $color-white;
+  }
+  &__line:nth-child(2) {
+    margin-top: 11.5px;
+    margin-bottom: 11.5px;
+  }
+}
+
+.header-content {
+  &__title {
+    font-family: $title-font;
+    font-size: 96px;
+    line-height: 112px;
+    margin-bottom: 40px;
+  }
+  &__text {
+    max-width: 284px;
+    margin-bottom: 25px;
+  }
+}
+
+.header-drive__btn {
+  max-width: 100%;
+}
+
+.drive__btn {
+  width: 290px;
+  height: 90px;
+  color: $color-white;
+  text-align: center;
+  font-weight: 700;
+  background: rgba(255, 255, 255, 0.15);
+  border: 1px solid $color-white;
+  transition-duration: 0.5s;
+  &:hover {
+    background-color: $color-red-dark;
+  }
+}
+
+.footer {
+  background-color: $color-red-dark;
+  &__inner {
+    text-align: center;
+    padding-top: 83px;
+    padding-bottom: 20px;
+  }
+  &__btn {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  &__menu {
+    display: flex;
+    justify-content: center;
+    margin-top: 83px;
+    font-weight: 700;
+    flex-wrap: wrap;
+  }
+  &__menu-item {
+    padding: 0 10px;
+    position: relative;
+  }
+  &__menu-link {
+    color: $color-white;
+  }
+  &__menu-item+&__menu-item::before {
+    content: "|";
+    position: absolute;
+    left: -2px;
+  }
+}
