Issue 01.06.01 - Added styles for element statistics

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,9 +1,11 @@
 /* fonts */
-$title-font: 'Roboto', sans-serif;
+$font-base: 'Roboto Condensed', sans-serif;
+$font-title: 'Roboto', sans-serif;
 
 /* colors */
 $color-white: #FFFFFF;
 $color-red-dark: #770302;
+$color-red-light: #B70021;
 $color-background-black: #0B0B0B;
 $color-text-grey: #363636;
 $color-text-grey-light: #959595;
