--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,7 +9,7 @@ body {
   color: $color-white;
   font-size: 24px;
   line-height: 28px;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: $font-base;
   font-weight: 400;
 }
 
@@ -56,7 +56,7 @@ body {
 
 .header-content {
   &__title {
-    font-family: $title-font;
+    font-family: $font-title;
     font-size: 96px;
     line-height: 112px;
     margin-bottom: 40px;
@@ -115,5 +115,42 @@ body {
     content: "|";
     position: absolute;
     left: -2px;
+  }
+}
+
+.statistics {
+  margin: 160px 0 100px;
+  &__items {
+    display: flex;
+    justify-content: space-around;
+  }
+  &__item {
+    text-align: center;
+  }
+  &__item__title {
+    margin-bottom: 19px;
+  }
+  &__item__num {
+    font-size: 96px;
+    line-height: 112px;
+    margin-bottom: 7px;
+    font-family: $font-title;
+  }
+  &__item__num span {
+    font-size: 24px;
+    line-height: 28px;
+    margin-left: 10px;
+  }
+  &__item__descr {
+    color: $color-red-light;
+  }
+  &__item__num--speed span {
+    display: inline-block;
+    position: relative;
+  }
+  &__item__num--speed span::before {
+    content: "+";
+    position: absolute;
+    top: -65px;
   }
 }
