--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,11 +20,47 @@ body {
   background: rgba(0, 0, 0, 0.3);
   left: 0;
   right: 0;
-}
-
-.header__top {
-  display: flex;
-  justify-content: space-between;
+  &__top {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__btn {
+    width: 60px;
+    height: 60px;
+    border: 1px solid $color-white;
+    margin-top: 31px;
+    padding: 17px 12px;
+    background-color: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    &__line {
+      width: 36px;
+      height: 2px;
+      background-color: $color-white;
+    }
+    &__line:nth-child(2) {
+      margin-top: 11.5px;
+      margin-bottom: 11.5px;
+    }
+  }
+  &-content {
+    &__title {
+      font-family: $font-title;
+      font-size: 96px;
+      line-height: 112px;
+      margin-bottom: 40px;
+    }
+    &__text {
+      max-width: 284px;
+      margin-bottom: 25px;
+    }
+  }
+  &-drive__btn {
+    max-width: 100%;
+  }
 }
 
 .logo {
@@ -32,57 +68,8 @@ body {
   padding-bottom: 29px;
 }
 
-.header__btn {
-  width: 60px;
-  height: 60px;
-  border: 1px solid $color-white;
-  margin-top: 31px;
-  padding: 17px 12px;
-  background-color: rgba(255, 255, 255, 0.1);
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  &__line {
-    width: 36px;
-    height: 2px;
-    background-color: $color-white;
-  }
-  &__line:nth-child(2) {
-    margin-top: 11.5px;
-    margin-bottom: 11.5px;
-  }
-}
-
-.header-content {
-  &__title {
-    font-family: $font-title;
-    font-size: 96px;
-    line-height: 112px;
-    margin-bottom: 40px;
-  }
-  &__text {
-    max-width: 284px;
-    margin-bottom: 25px;
-  }
-}
-
-.header-drive__btn {
-  max-width: 100%;
-}
-
 .drive__btn {
-  width: 290px;
-  height: 90px;
-  color: $color-white;
-  text-align: center;
-  font-weight: 700;
-  background: rgba(255, 255, 255, 0.15);
-  border: 1px solid $color-white;
-  transition-duration: 0.5s;
-  &:hover {
-    background-color: $color-red-dark;
-  }
+  @include drive-btn;
 }
 
 .footer {
@@ -96,6 +83,9 @@ body {
     max-width: 100%;
     display: flex;
     justify-content: center;
+  }
+  & .drive__btn:hover {
+    background-color: $color-text-grey-light;
   }
   &__menu {
     display: flex;
@@ -115,6 +105,65 @@ body {
     content: "|";
     position: absolute;
     left: -2px;
+  }
+}
+
+.menu {
+  background: $color-background-black;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  transition: all .5s;
+  z-index: 3;
+  &.active {
+    left: 0;
+  }
+  &__close-btn {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 31px;
+    right: 15px;
+    cursor: pointer;
+  }
+  &__close-btn::after,
+  &__close-btn::before {
+    content: "";
+    width: 70px;
+    height: 2px;
+    background-color: $color-white;
+    position: absolute;
+    transform-origin: left;
+  }
+  &__close-btn::after {
+    transform: rotate(-45deg);
+    bottom: -1px;
+  }
+  &__close-btn::before {
+    transform: rotate(45deg);
+  }
+  &__list {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+  }
+  &__list a {
+    display: inline-block;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+    min-width: 368px;
+    padding: 30px 25px 14px 0;
+    color: $color-white;
+    border-bottom: 3px solid $color-red-light;
+    transition: all .5s;
+  }
+  &__list a:hover {
+    color: $color-red-light;
+    border-color: $color-white;
+    transform: scale(1.2);
+    margin-left: 37px;
   }
 }
 
