Issue 01.14.01 - Added styles for element video

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -239,3 +239,15 @@ body {
     top: -65px;
   }
 }
+
+.section-video {
+  margin-bottom: 100px;
+  position: relative;
+  &__btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+  }
+}
