--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -281,3 +281,28 @@ body {
     margin-left: 340px;
   }
 }
+
+.design {
+  margin-bottom: 100px;
+  &__img {
+    margin-bottom: 100px;
+  }
+  &__info {
+    display: flex;
+  }
+  &__row {
+    max-width: 570px;
+    width: 100%;
+    height: 200px;
+  }
+  &__row:nth-child(2) {
+    margin-left: 57px;
+  }
+  &__num {
+    color: $color-red-light;
+  }
+  &__text {
+    max-width: 450px;
+    margin-left: 105px;
+  }
+}
