--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -26,6 +26,25 @@ body {
   position: relative;
 }
 
+/* scrollbar for FireFox */
+* {
+  scrollbar-color: $color-red-light $color-text-grey;
+  scrollbar-width: thin;
+}
 
+/* scrollbar for Chrome */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $color-red-light;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: $color-text-grey;
+}
 
 
